<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_set_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_number"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/btn_delete_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_delete"
        android:contentDescription="@string/btn_delete_set" />

</LinearLayout>
